--- a/backend_Project/docker/python/Dockerfile
+++ b/backend_Project/docker/python/Dockerfile
@@ -5,3 +5,4 @@ WORKDIR /backend
 ADD requirements.txt /backend/
 RUN pip install -r requirements.txt
 ADD . /backend/
+RUN export PYTHONDONTWRITEBYTECODE=1
