--- a/frontend_Project/node/frontend/package.json
+++ b/frontend_Project/node/frontend/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "proxy": "http://backend:8000/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.21.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.45",
+    "@types/react": "^16.14.23",
+    "@types/react-dom": "^16.9.14",
+    "axios": "^1.6.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
